# annax

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish_to_pypi.yaml
src/annax/: __init__.py  algo.py  index.py  ivf.py  kmeans.py  ops.py  pfunc.py  pjit.py  pq.py  search.py  utils.py
src/annax/index/: __init__.py  algo.py  index.py  ivf.py  kmeans.py  la.py  ops.py  pq.py  serialize.py
tests/: test_index.py  test_kmeans.py  test_pq.py
