[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=62.6", "setuptools_scm[toml]>=6.2", "wheel"]

[project]
dependencies = [
  "jax>=0.4.8",
  "jaxlib>=0.4.7",
  "numpy>=1.24.2",
  "zstandard~=0.20.0",
]
description = "Fast and memory-efficient approximate nearest neighbor search with JAX"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "annax"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "annax.version.version"}

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "release-branch-semver"
write_to = "src/annax/version.py"

[options.packages.find]
exclude = [
  "tests",
  "tests.*",
]

[project.optional-dependencies]
dev = [
  "pytest~=7.2.2",
  "black~=23.3.0",
  "isort~=5.12.0",
  "pre-commit~=3.2.2",
]

[tool.black]
extend-exclude = '''
/(
  | tests
)/
'''
line-length = 100
target-version = ["py39"]

[tool.isort]
line_length = 100
profile = "black"
py_version = "39"
